# capacity

./: .gitmodules  cabal.project  flake.nix
capacity-app/: capacity-app.cabal
capacity-app/src/: Main.hs
nix/: outputs.nix  shell.nix
